@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170521"
-#define public MagickPackageReleaseDate "snapshot-20170521"
+#define public MagickPackageVersionAddendum ".020170524"
+#define public MagickPackageReleaseDate "snapshot-20170524"
