@@ -2276,8 +2276,17 @@ unsigned int    gifDisposeMethod ( void ) const
 <h2><a class="toc-backref" href="#id161">iccColorProfile</a></h2>
 <p>ICC color profile. Supplied via a <a class="reference external" href="Blob.html">Blob</a> since Magick++/ and
 GraphicsMagick do not currently support formating this data structure
-directly.  Specifications are available from the International Color
-Consortium for the format of ICC color profiles:</p>
+directly.</p>
+<p>If there is not already an ICC color profile, the profile is merely
+attached to the image without transforming the pixels.  If there is
+already an ICC color profile (the source profile), the pixels are
+translated according to the source and target profiles, and the
+existing profile is replaced with the target profile.</p>
+<p>Also see <a class="reference internal" href="#renderingintent">renderingIntent</a>, which allows specifying the rendering
+intent if the profile is executed.</p>
+<p>Specifications for ICC color profiles and their usage are available
+from the International Color Consortium for the format of ICC color
+profiles:</p>
 <pre class="literal-block">
 void            iccColorProfile( const Blob &amp;colorProfile_ )
 
@@ -2547,7 +2556,7 @@ bool            quiet ( void ) const;
 <div class="section" id="renderingintent">
 <h2><a class="toc-backref" href="#id186">renderingIntent</a></h2>
 <p>The type of rendering intent (used when applying an ICC color
-profile):</p>
+profile using <a class="reference internal" href="#icccolorprofile">iccColorProfile</a>):</p>
 <pre class="literal-block">
 void            renderingIntent ( const RenderingIntent renderingIntent_ )
 
